IKNINJA-1364 : fixed css so that white spaces are not collapsed while rendering

--- a/js/components/layout/document-entry.reel/document-entry.css
+++ b/js/components/layout/document-entry.reel/document-entry.css
@@ -11,7 +11,7 @@
 .documentEntry span
 {
     display: inline-block;
-    white-space: nowrap;
+    white-space: pre;
     overflow: hidden;
     text-overflow: ellipsis;
     max-width:100px;
